--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
-{
+{"scripts": {
+  "dev": "npx tailwindcss -i ./src/css/input.css -o ./dist/output.css --watch"
+},
   "devDependencies": {
     "tailwindcss": "^3.3.2"
   }
